# MAS_code

./: README.md  random.py
Nonholonomic_Wheeled_Mobile_Robots/: NWMR.slx  NWMR.slxc  NWMR_ctrl.m  NWMR_input.m
Nonholonomic_Wheeled_Mobile_Robots/二阶/: LMI.m  LMI5items.m  controldata.asv  controldata.m  fuxian.asv  fuxian.m  genzong.m  origin.m  ~$记录结果.docx  ~WRL1184.tmp  记录结果.docx
Nonholonomic_Wheeled_Mobile_Robots/整理/: LMIexample.asv  LMIexample.m  LMIexample1.asv  LMIexample1.m  LMIexample2.asv  LMIexample2.m  LMIexample3.asv  LMIexample3.m  LMIexample4.asv  LMIexample4.m  LMItest.mlx  coordinate.m  data_plot.asv  data_plot.m  leader_formation_control.m  leader_formation_control_and_follower_containment.asv  leader_formation_control_and_follower_containment.m  leader_formation_control_and_follower_containment_simple.m  model.m  zhihuLMI.m  zhihuLMIorigin.m
Nonholonomic_Wheeled_Mobile_Robots/期望位置固定/: NWMR.slx  NWMR_plant.m
Nonholonomic_Wheeled_Mobile_Robots/期望位置移动/: NWMR.slx  NWMR.slxc  test.m  (+8 more)
containment/: Topology.py  containment.ipynb  containment00草稿.ipynb  containment01领导者固定不动.py  containment02领导者固定不动+时滞.py  containment07领导者移动+时滞+不使用微分方程.py  containment08投影法.py  containment09非线性非完整约束离散化-领导者不动.py  containment09非线性非完整约束离散化.py  containment10非线性非完整约束离散化-领导者移动.py  containment11非线性非完整约束离散化-领导者移动+时延.py  containment12非线性非完整约束离散化-领导者移动+时延控制律修改 不太行.py  containment12非线性非完整约束离散化-领导者移动+时延控制律修改.py  containment13线性离散化-领导者移动+时延.py  containment_different_delay.m  containment草稿.ipynb  containment领导者固定不动不使用微分方程.py  containment领导者移动+时滞.py  containment领导者移动.py  containment领导者移动不使用微分方程.py  multi_agent_containment_simulation.asv  rendezous.py  test.ipynb  test.m  test_arrow.py  时滞微分方程.py
event-trigger/: ETCC.m  STCC.asv  STCC.m  main.asv  main.ipynb  main.m  test.m
turtlebot3/: containment_l.txt  followermove.txt  leader_follower_points.txt  leader_follower_points20230810-1.txt  stationary.txt  test_points20230810.txt
turtlebot3/src/gazebo_swarm_robot_tb3/: CMakeLists.txt
turtlebot3/src/gazebo_swarm_robot_tb3/launch/: comtainment_test.launch  four.launch  gazebo_swarm_robot_5.launch  gazebo_swarm_robot_6.launch  gazebo_swarm_robot_8.launch  one.launch  real.launch  ten.launch  ten_copy.launch  ten_evn.launch  ten_evn_waffle.launch  ten_waffle.launch  three.launch  two.launch
turtlebot3/src/gazebo_swarm_robot_tb3/scripts/: 01leadermove.py  02followermove.py  03evn.py  05real.py  1to0.py  2to1.py  containment_l.py  containment_l_save_data.py  containment_test.py  containment_test_save_data.py  init.py  leader_follower.py  main_test.py  random.py  swarm_robot_control_h.py  swarm_robot_control_new.py  test.py  test_new.py
turtlebot3/src/gazebo_swarm_robot_tb3/src/: main_test1.cpp  main_test2.cpp  main_test3.cpp  stop_robot.cpp  swarm_robot_control.cpp
turtlebot3/src/gazebo_swarm_robot_tb3/worlds/: TAC.world  stage1.world
visualization/: ciyun.py  ciyun.txt  ciyun1.txt  containment_test.txt  containment_test20231123.txt  leader_follower_points20231123.txt  test_points.txt  visualize.py  visualize_linux.py
(+152 files in other folders)
